--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Tráfego na Rede via SNMP</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-blue.min.css" />
         <link rel="stylesheet" href="./index.css">
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
@@ -45,10 +45,10 @@
                                 </p>
                             </div>
                             <div class="mdl-card__actions">
-                                <button id="stop" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                                <button id="stop" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                                     Parar
                                 </button>
-                                <button id="reset" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                                <button id="reset" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                                     Reiniciar
                                 </button>
                             </div>
